@@ -1,4 +1,4 @@
-// Copyright 2019 The Bazel Authors. All rights reserved.
+// Copyright 2019 The Buildfarm Authors. All rights reserved.
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -77,7 +77,6 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -445,7 +444,7 @@ class Cat {
     messages.add(queuedOperation.getAction());
     messages.add(queuedOperation.getCommand());
     messages.addAll(queuedOperation.getTree().getDirectoriesMap().values());
-    Path blobs = Paths.get("blobs");
+    Path blobs = Path.of("blobs");
     for (Message message : messages.build()) {
       Digest digest = digestUtil.compute(message);
       try (OutputStream out =
@@ -689,7 +688,6 @@ class Cat {
     WorkerProfileMessage response = instance.getWorkerProfile();
     System.out.println("\nWorkerProfile:");
     String strIntFormat = "%-50s : %d";
-    String strFloatFormat = "%-50s : %2.1f";
     long entryCount = response.getCasEntryCount();
     long unreferencedEntryCount = response.getCasUnreferencedEntryCount();
     System.out.printf((strIntFormat) + "%n", "Current Total Entry Count", entryCount);
@@ -701,10 +699,8 @@ class Cat {
     if (entryCount != 0) {
       System.out.println(
           format(
-                  strFloatFormat,
-                  "Percentage of Unreferenced Entry",
-                  100.0f * response.getCasEntryCount() / response.getCasUnreferencedEntryCount())
-              + "%");
+              "%-50s : %2.1f%%",
+              "Percentage of Unreferenced Entry", (100.0f * unreferencedEntryCount) / entryCount));
     }
     System.out.printf(
         (strIntFormat) + "%n",
